feat: implementação completa da API REST Back End Java Sênior